k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
          - "server"
          - "--console-address"
          - ":9001"
          - "/data"
        ports:
          - containerPort: 9000  # API endpoint
          - containerPort: 9001  # Console endpoint
        volumeMounts:
          - name: minio-data
            mountPath: /data
        resources:
          requests:
            cpu: "200m"
            memory: "1Gi"
          limits:
            cpu: "400m"
            memory: "2Gi"
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-pvc
