k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - name: api                # Service port for S3 API
      port: 80
      targetPort: 9000
    - name: console            # Service port for Console UI
      port: 9001
      targetPort: 9001
